fix map